--- a/11.Agentic_RAG_with_langgraph/agentic_ragのコピー.ipynb
+++ b/11.Agentic_RAG_with_langgraph/agentic_ragのコピー.ipynb
@@ -544,7 +544,7 @@
     "    documents=doc_splits,\n",
     "    collection_name=\"rag-chrome\",\n",
     "    embedding=embeddings\n",
-    "    \n",
+    "\n",
     ")"
    ]
   },
@@ -567,7 +567,7 @@
     "    retriever,\n",
     "    \"retrieve_blog_posts\",\n",
     "    \"Search and return information about Lilian Weng blog posts on LLM agents, prompt engineering, and adversarial attacks on LLMs.\",\n",
-    "    \n",
+    "\n",
     ")\n"
    ]
   },
@@ -631,9 +631,9 @@
    "source": [
     "def grade_documents(state:AgentState):\n",
     "    llm_with_structure_op=llm.with_structured_output(grade)\n",
-    "    \n",
+    "\n",
     "    prompt=PromptTemplate(\n",
-    "         template=\"\"\"You are a grader assessing relevance of a retrieved document to a user question. \\n \n",
+    "         template=\"\"\"You are a grader assessing relevance of a retrieved document to a user question. \\n\n",
     "        Here is the retrieved document: \\n\\n {context} \\n\\n\n",
     "        Here is the user question: {question} \\n\n",
     "        If the document contains keyword(s) or semantic meaning related to the user question, grade it as relevant. \\n\n",
@@ -641,17 +641,17 @@
     "        input_variables=[\"context\", \"question\"]\n",
     "    )\n",
     "    chain = prompt | llm_with_structure_op\n",
-    "    \n",
+    "\n",
     "    messages = state[\"messages\"]\n",
     "    last_message = messages[-1]\n",
-    "    \n",
+    "\n",
     "    question = messages[0].content\n",
     "    docs = last_message.content\n",
-    "    \n",
+    "\n",
     "    scored_result = chain.invoke({\"question\": question, \"context\": docs})\n",
-    "    \n",
+    "\n",
     "    score = scored_result.binary_score\n",
-    "    \n",
+    "\n",
     "    if score == \"yes\":\n",
     "        print(\"---DECISION: DOCS RELEVANT---\")\n",
     "        return \"generator\"\n",
@@ -672,9 +672,9 @@
     "    question = messages[0].content\n",
     "    last_message = messages[-1]\n",
     "    docs = last_message.content\n",
-    "    \n",
+    "\n",
     "    prompt = hub.pull(\"rlm/rag-prompt\")\n",
-    "    \n",
+    "\n",
     "    rag_chain = prompt | llm | StrOutputParser()\n",
     "\n",
     "    response = rag_chain.invoke({\"context\": docs, \"question\": question})\n",
@@ -731,19 +731,19 @@
     "    print(\"---TRANSFORM QUERY---\")\n",
     "    messages = state[\"messages\"]\n",
     "    question = messages[0].content\n",
-    "    \n",
+    "\n",
     "    msg = [\n",
     "        HumanMessage(\n",
-    "            content=f\"\"\" \\n \n",
-    "    Look at the input and try to reason about the underlying semantic intent / meaning. \\n \n",
+    "            content=f\"\"\" \\n\n",
+    "    Look at the input and try to reason about the underlying semantic intent / meaning. \\n\n",
     "    Here is the initial question:\n",
     "    \\n ------- \\n\n",
-    "    {question} \n",
+    "    {question}\n",
     "    \\n ------- \\n\n",
     "    Formulate an improved question: \"\"\",\n",
     "        )\n",
     "    ]\n",
-    "    \n",
+    "\n",
     "    # Grader\n",
     "    response = llm.invoke(msg)\n",
     "    return {\"messages\": [response]}"
@@ -768,8 +768,8 @@
    "source": [
     "workflow=StateGraph(AgentState)\n",
     "workflow.add_node(\"ai_assistant\",AI_Assistant)\n",
-    "workflow.add_node(\"retriever\", retrieve) \n",
-    "workflow.add_node(\"rewriter\", rewrite) \n",
+    "workflow.add_node(\"retriever\", retrieve)\n",
+    "workflow.add_node(\"rewriter\", rewrite)\n",
     "workflow.add_node(\"generator\", generate)"
    ]
   },
@@ -815,8 +815,7 @@
    "source": [
     "workflow.add_conditional_edges(\"retriever\",\n",
     "                               grade_documents,\n",
-    "                               {\"rewriter\": \"rewriter\",\"generator\": \"generator\"})\n",
-    "                               "
+    "                               {\"rewriter\": \"rewriter\",\"generator\": \"generator\"})\n"
    ]
   },
   {
@@ -1010,6 +1009,102 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "table = [[None] for _ in range(10)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[None],\n",
+       " [None],\n",
+       " [None],\n",
+       " [None],\n",
+       " [None],\n",
+       " [None],\n",
+       " [None],\n",
+       " [None],\n",
+       " [None],\n",
+       " [None]]"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "table\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "table[2] = [2, 2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[None],\n",
+       " [None],\n",
+       " [2, 2],\n",
+       " [None],\n",
+       " [None],\n",
+       " [None],\n",
+       " [None],\n",
+       " [None],\n",
+       " [None],\n",
+       " [None]]"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "table"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<function list.pop(index=-1, /)>"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "table[2].pop"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -1018,7 +1113,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "venv",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -1032,7 +1127,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.16"
+   "version": "3.11.3"
   }
  },
  "nbformat": 4,
