--- a/third_finance_competition/src/llama-parse/recursive_medium.ipynb
+++ b/third_finance_competition/src/llama-parse/recursive_medium.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -41,12 +41,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from llama_index.core import SimpleDirectoryReader, ServiceContext, VectorStoreIndex\n",
+    "from llama_index.core import VectorStoreIndex\n",
     "from llama_index.llms.openai import OpenAI\n",
     "from llama_parse import LlamaParse\n",
     "from llama_index.core import Settings\n",
